# claw-code-parity

./: PORTING_PLAN.md
crates/channels/: Cargo.toml
crates/channels/src/: lib.rs  nextcloud_talk.rs  nostr.rs  notion.rs  slack.rs  telegram.rs  twitter.rs  wecom.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs  router.rs
crates/identity/: Cargo.toml
crates/identity/src/: api_key.rs  capability.rs  webauthn.rs
crates/plugins/src/: hooks.rs
crates/runtime/src/: conversation.rs  sandbox.rs
crates/server/src/: lib.rs
rust/: DEEP_INTEGRATION_PLAN.md
rust/crates/api/src/: client.rs  lib.rs  types.rs
rust/crates/api/src/providers/: claw_provider.rs  mod.rs  openai_compat.rs
rust/crates/api/tests/: openai_compat_integration.rs
rust/crates/channels/src/: bluesky.rs  dingtalk.rs  discord.rs  email.rs  imessage.rs  irc.rs  lark.rs  manager.rs  matrix.rs  mattermost.rs  mqtt.rs  qq.rs  reddit.rs  signal.rs  traits.rs  whatsapp.rs
rust/crates/claw-cli/: Cargo.toml
rust/crates/claw-cli/src/: main.rs
rust/crates/commands/src/: lib.rs
rust/crates/gateway/src/: reliable.rs
rust/crates/identity/src/: api_key.rs  lib.rs  webauthn.rs
rust/crates/plugins/src/: hooks.rs  lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: bash.rs  compact.rs  config.rs  conversation.rs  file_ops.rs  hooks.rs  lib.rs  mcp_stdio.rs  permissions.rs  prompt.rs  sandbox.rs  session.rs  usage.rs
rust/crates/rusty-claude-cli/src/: main.rs
rust/crates/server/: Cargo.toml
rust/crates/tools/src/: lib.rs
