[package]
name = "identity"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1"

[lints]
workspace = true
